Upade asn code for map_dialouge and use some functions from gsm_map.
svn path=/trunk/; revision=15105

--- a/asn1/MAP_Dialogue/MAP_DialoguePDU.cnf
+++ b/asn1/MAP_Dialogue/MAP_DialoguePDU.cnf
@@ -4,6 +4,11 @@
 # $Id$
 
 #.MODULE_IMPORT
+MAP-CommonDataTypes gsm_map
+MAP-ExtensionDataTypes gsm_map
+MAP-ST-DataTypes gsm_map
+
+#.INCLUDE ../gsmmap/gsm_map-exp.cnf
 
 #.EXPORTS
 
