Pick up some fixes and enhancements from http://cvs.fedora.redhat.com/viewcvs/rpms/ethereal/FC-4/:
In the LPD dissector, make lpd_client_code a value_string so that we
don't segfault.  Do the same for lpd_server_code, although it's not
strictly necessary.

Check to see if htmlview is installed, and use it as our HTML viewer.

The Fedora RPM has other patches, but I'm not sure if they should
be applied.


svn path=/trunk/; revision=15143

--- a/configure.in
+++ b/configure.in
@@ -38,6 +38,14 @@ then
 	#
 	AC_MSG_ERROR(I couldn't find pod2html; make sure it's installed and in your path)
 fi
+AC_PATH_PROG(HTML_VIEWER, htmlview)
+if test "x$HTML_VIEWER" = x
+then
+	AC_DEFINE_UNQUOTED(HTML_VIEWER, "mozilla", [HTML viewer, e.g. mozilla])
+else
+	AC_DEFINE_UNQUOTED(HTML_VIEWER, "htmlview", [HTML viewer, e.g. mozilla])
+fi
+
 AC_PATH_PROG(LEX, flex)
 AC_PATH_PROG(PYTHON, python)
 
