--- a/epan/dissectors/Makefile.common
+++ b/epan/dissectors/Makefile.common
@@ -676,6 +676,7 @@ DISSECTOR_INCLUDES =	\
 	packet-dcerpc-wkssvc.h	\
 	packet-dcerpc.h	\
 	packet-dcom.h	\
+	packet-dcom-cba-acco.h	\
 	packet-ddtp.h	\
 	packet-diameter-defs.h	\
 	packet-diffserv-mpls-common.h	\
