Make sure "lemon" exists before we try to use it.  This can happen if we run "make dist" before running "make".
svn path=/trunk/; revision=15167

--- a/epan/dfilter/Makefile.am
+++ b/epan/dfilter/Makefile.am
@@ -76,8 +76,8 @@ scanner.o : scanner.c grammar.h
 
 LEMON=../../tools/lemon
 
-grammar.h : grammar.c
-grammar.c : grammar.lemon
+grammar.h : grammar.c 
+grammar.c : grammar.lemon $(LEMON)/lemon
 	$(LEMON)/lemon t=$(srcdir)/$(LEMON)/lempar.c $(srcdir)/grammar.lemon || \
 		(rm -f grammar.c grammar.h ; false)
 
