Clean up after ourselves so that we pass "distcheck" again.
svn path=/trunk/; revision=15194

--- a/epan/dfilter/Makefile.am
+++ b/epan/dfilter/Makefile.am
@@ -28,6 +28,11 @@ CLEANFILES = \
 	libdfilter.la		\
 	*~
 
+DISTCLEANFILES = \
+	grammar.out	\
+	grammar.c	\
+	grammar.h
+
 MAINTAINERCLEANFILES = \
 	Makefile.in	\
 	grammar.c	\
